src/index.css
body {
  position: relative;
  background-color: black;
  font-family: roboto;
}

#content {
  border-style: solid;
  border-width: 0px 1px;
  border-color: gray;
  padding: 0;
}

#lhs {
  padding: 0;
  width: auto;
}

#explore {
  position: sticky;
  top: 0;
}

#tweet {
  background-color: #c844ff;
  margin: 1rem;
  border-radius: 20px;
  padding: 0.7rem;
  width: auto;
}

#nav {
  position: sticky;
  top: 0;
}

.nav-link {
  color: white;
  padding: 1rem;
  border-radius: 20px;
  margin: 0.4rem;
}

.white-img {
  filter: brightness(0) invert(1);
}

#top-left {
  margin: 3rem 0;
}

#top-mid {
  border-width: 0 0 1px 0;
  border-color: gray;
  border-style: solid;
  position: sticky;
  top: 0;
  background-color: black;
  z-index: 1;
}

#search-engine {
  background-color: black;
  margin: 2rem 0;
  border-radius: 20px;
  height: 3rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

#search-icon {
  width: 1.3rem;
  margin: 0 0.4rem;
}

#user {
  position: absolute;
  bottom: 1rem;
}

#icon {
  width: 5rem !important;
}

#avatar {
  width: 5rem !important;
}

img {
  width: 2rem;
  image-rendering: smooth;
}

.mr-1 {
  margin: 0 0.5rem 0 0;
}

#post-list {
  width: 100%;
  margin: 0;
}

.post {
  margin: 4%;
}

.post-user-info {
  height: 2.8rem;
}

.post-user-avatar {
  margin: 0 0.5rem 0 0;
  height: 100%;
  width: auto;
}

.post-user-id {
  flex-direction: column;
  align-items: unset !important;
}

.post-image-div {
  width: 100%;
  border-style: solid;
  border-color: gray;
  border-width: 2px;
  margin: 1rem 0;
}

.post-image {
  width: 100%;
  aspect-ratio: 1/1;
  object-fit: cover;
  object-position: center;
}

.mask {
  background-color: #5e5e5e3d;
  border-radius: 20px;
  width: 90%;
  aspect-ratio: 3/4;
  overflow: hidden;
  margin: 1.5rem 0;
}

.h4 {
  font-size: 1.3rem;
}

.top-p-1 {
  padding: 1rem 1rem 0rem 1rem;
}

#you {
  border-right-style: solid;
  border-right-width: 1px;
  border-right-color: gray;
}

.nav-link:focus,
.nav-link:hover {
  color: #ffffff;
  background-color: #c844ff2e;
  font-weight: bold;
}
/* scrollbar */
/* width */
::-webkit-scrollbar {
  width: 12px;
}

/* Track */
::-webkit-scrollbar-track {
  background: transparent;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #6c757d;
  border-radius: 20px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #c844ff;
}

@media (max-width: 767px) {
  #nav {
    height: 0 !important;
  }
  #nav .nav {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    justify-content: space-around;
    flex-direction: row !important;
    background-color: black;
    border-top-style: solid;
    border-top-color: #c844ff;
    border-top-width: 1px;
  }

  #explore {
    height: 0 !important;
  }

  #content {
    border-style: none;
  }
  #mid-center {
    margin: 0 0 10vh 0;
    overflow: hidden;
  }
  #search-engine-div {
    display: none;
  }

  #nav .a {
    display: inline-block;
    margin-right: 1rem;
  }

  #nav img {
    display: block;
    margin: 0;
  }

  #nav span {
    display: none;
  }

  #tweet {
    display: none !important;
  }

  #user {
    display: none !important;
  }

  #top-left {
    display: none !important;
  }

  ::-webkit-scrollbar {
    display: none;
  }
}

